<resources>
    <string name="app_name">LiveFit</string>
    <string name="title">LiveFit</string>
    <string name="slogan">No matter what you are whether you are at home, or in the office, or at the beach, we will  keep you fit.</string>
    <string name="signup">SIGN UP</string>
    <string name="signin">SIGN IN</string>
    <string name="hint">Email</string>
    <string name="hint2">Age</string>
    <string name="hint3">Gender (F/M)</string>
    <string name="hint4">Password</string>
    <string name="physical">LiveFit</string>
    <string name="todo">TODO</string>
    <string name="exer">Exercise</string>
    <string name="food">Food</string>
    <string name="work">Workout</string>
    <string name="bmi">BMI</string>
    <string name="caloriecal">Calculate</string>
    <string name="visual">Visual</string>
    <string name="about">About</string>
    <string name="title_activity_workout_layout">WorkoutLayout</string>
    <string name="seven">7 Minutes Workout</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="full">Full Workout</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cms)</string>
    <string name="very_severely_underweight">Very Severely Underweight</string>
    <string name="severely_underweight">Severely Underweight</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese_class_i">Moderately Obese</string>
    <string name="obese_class_ii">Severely Obese</string>
    <string name="obese_class_iii">Very Severely Obese</string>
    <string name="calculate">Calculate</string>
    <string name="close">Close</string>
    <string name="gm">gm</string>
    <string name="calculate_your_calorie_intake">Calculate your calorie intake</string>
    <string name="next">Next</string>
    <string name="food_item">Food Item</string>
    <string name="measure">Measure</string>
    <string name="quantity">Quantity</string>
    <string name="_0">0</string>
    <string name="name">Name</string>
    <string name="reset">RESET</string>
    <string name="FALSE">FALSE</string>

    <string name="TRUE">TRUE</string>
    <string name="calorie">Calories</string>
    <string name="add">ADD</string>
    <string name="goback">BACK</string>
    <string name="delete">DELETE</string>
    <string name="bmical">BMI CALCULATOR</string>


    <string name="intro3">Our body needs adequate calories and protein to supply the body with energy.You can estimate the calories needed to maintain your body weight by using the feature below.</string>
</resources>
