<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg5"
    android:orientation="vertical"
    tools:context=".Add">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="140dp"
            android:text="Enter the food name along with measure and calories to add"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/input1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/input1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="44dp"
            android:hint="@string/food"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/input3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.169"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/input2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="44dp"
            android:gravity="clip_vertical"
            android:hint="@string/measure"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/input3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.745"
            app:layout_constraintStart_toEndOf="@+id/input1" />

        <EditText
            android:id="@+id/input3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="72dp"
            android:hint="@string/calorie"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/goback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/insert"
            android:layout_width="109dp"
            android:layout_height="55dp"
            android:layout_below="@id/input3"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginBottom="212dp"
            android:background="@drawable/roundb"
            android:text="@string/add"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/goback"
            android:layout_width="109dp"
            android:layout_height="55dp"
            android:layout_below="@id/input3"
            android:layout_gravity="center"
            android:layout_marginBottom="212dp"
            android:background="@drawable/roundb"
            android:text="@string/goback"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.611"
            app:layout_constraintStart_toEndOf="@+id/insert" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
