<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayoutS"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg5"
    tools:context=".Signup">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editUsername"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/hint"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editAge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:met_baseColor="@color/black"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/black"
        app:met_singleLineEllipsis="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editAge"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint2"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editGender"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:met_baseColor="@color/black"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/black"
        app:met_singleLineEllipsis="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editGender"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/hint3"
        android:textColor="@color/black"
        android:textColorHint="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:met_baseColor="@color/black"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/black"
        app:met_singleLineEllipsis="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editPassword"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="27dp"
        android:hint="@string/hint4"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:met_baseColor="@color/black"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/black"
        app:met_singleLineEllipsis="true" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginBottom="79dp"
        android:background="@drawable/roundb"
        android:gravity="center"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:text="SignUp"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

