<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg5"
    android:textColor="@color/black"
    tools:context=".Signin">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="81dp"
        android:layout_marginLeft="81dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/hint"
        android:textColor="@color/black"
        android:textColorHint="@android:color/black"
        android:textSize="20sp"
        app:met_baseColor="@color/black"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/black"
        app:met_singleLineEllipsis="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSignIn"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="81dp"
        android:layout_marginLeft="81dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="96dp"
        android:hint="@string/hint4"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@android:color/black"
        android:textSize="20sp"
        app:met_baseColor="@color/black"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/black"
        app:met_singleLineEllipsis="true" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_above="@+id/progressBar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="134dp"
        android:layout_marginRight="134dp"
        android:layout_marginBottom="47dp"
        android:background="@drawable/roundb"
        android:text="@string/signin"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editUsername"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="163dp"
        android:layout_marginLeft="163dp"
        android:layout_marginTop="169dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:layout_marginBottom="49dp"
        android:text="LogIn"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="186dp"
        android:layout_marginLeft="186dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:layout_marginBottom="55dp"
        android:visibility="invisible" />

</RelativeLayout>

